k8s/security/kyverno/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Audit
  background: true
  rules:
    - name: disallow-latest-tag
      match:
        resources:
          namespaces:
            - lab-app
      validate:
        message: "Imagens com tag :latest não são permitidas."
        pattern:
          spec:
            # Observação: imagens sem tag explícita também viram :latest.
            containers:
              - image: "!*:latest"
            initContainers:
              - image: "!*:latest"
